# bina

./: Cargo.toml
bina/: Cargo.toml
bina-app/: Cargo.toml
bina-app/src/: lib.rs  main.rs
bina-ecs/: Cargo.toml
bina-ecs/src/: bimap.rs  collections.rs  component.rs  components.rs  entity.rs  lib.rs  locking.rs  reference.rs  rng.rs  scene.rs  singleton.rs  str.rs  universe.rs  utility.rs  worker.rs
bina-graphics/: Cargo.toml
bina-graphics/src/: camera.rs  drawing.rs  lib.rs  polygon.rs  raw_img.rs  shader.wgsl  texture.rs
bina-graphics/src/renderers/: mod.rs
bina-graphics/src/renderers/textured/: mod.rs  shader.wgsl
bina-graphics/src/shaders/: colored_polygon.wgsl
bina-macros/: Cargo.toml
bina-macros/src/: lib.rs
bina/src/: lib.rs
