[package]
name = "bina-ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7"
fxhash = "0.2"
parking_lot = "0.12"
# delegate = "0.10"
# bimap = "0.6"
crossbeam = "0.8"
triomphe = "0.1"
rand = { version = "0.8", features = ["small_rng"] }
rand_core = "0.6"
spin_sleep = "1.1"
log = "0.4"
dashmap = "5.5"