[package]
name = "bina-graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.17"
image = "0.24"
winit = "0.28"
# fxhash = { workspace = true }
bina-ecs = { path = "../bina-ecs" }
# cgmath = "0.18"
static_assertions = { workspace = true }
log = { workspace = true }
bytemuck = { version = "1.12", features = [ "derive" ] }
lyon = "1.0"
atomic_float = "0.1"